# ptad

./: .gitignore  CMakeLists.txt  README  diffculties  parameters _fern.yml  parameters.yml
SVM/: linear.cpp  linear.h  tron.cpp
datasets/06_car/: .txt  Fern_KCFTrackerresultRect.txt  Fern_KCFTrackerresultTwoPoint.txt  HOG_KCFTrackerresultRect.txt  HOG_KCFTrackerresultTwoPoint.txt  Haar_KCFTrackerresultRect.txt  Haar_KCFTrackerresultTwoPoint.txt  output.txt  output1.txt
incSVM/: .~lock.README.md#  CMakeLists.txt  README.md  la_svm.cpp
incSVM/sample/: .~lock.README.odt#  README.odt  bin2libsvm  la_incr  la_svm  la_test  libsvm2bin  train.sparse.part1.scale  train.sparse.part1.scale~  train.sparse.part2.scale
include/: .goutputstream-NKDMOY  Classifier.h  FHOG.hpp  FileFunctions.h  TrackerLK.hpp  compressive.h  detection.h  feature.hpp  fhogtools.h  haarfeature.h  hogfeature.h  onlineBoosting.hpp  onlineMIL.hpp  system.h  trackerFeature.hpp  trackerFeatureSet.hpp  tracking.hpp  utils.h  vot.hpp
kcf/: CMakeLists.txt
kcf/cf_libs/common/: scale_estimator.hpp
kcf/cf_libs/dsst/: dsst_tracker.hpp
kcf/cf_libs/kcf/: kcf_tracker.hpp
scaleCT/: CMakeLists.txt  CompressiveTracker.cpp  CompressiveTracker.h
scaleCT/orignal/: CompressiveTracker.cpp  CompressiveTracker.h
scaleCT/yuqinghua/: CompressiveTracker.cpp  CompressiveTracker.h
src/: Classifier.cpp  FHOG.cpp  FileFunctions.cpp  LKTracker.cpp  compressive.cpp  detection.cpp  feature.cpp  fhogtools.cpp  haarfeature.cpp  hogfeature.cpp  onlineBoosting.cpp  onlineMIL.cpp  ptad.cpp  system.cpp  trackerFeature.cpp  trackerFeatureSet.cpp  utils.cpp
